# sentiment-analysis

./: main.py  pyproject.toml
config/: __init__.py
data/: dataloader.py
models/: lstm_attention.py
models/layers/: attention.py
utils/: __init__.py
