[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.4.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nlpprepkit>=1.1.3",
    "pydantic-settings>=2.8.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.black]
line-length = 280
